<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/grad_bg"
    tools:context=".AddUser"
    android:isScrollContainer="true"
    android:scrollbars="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/progressRelLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone">
                <ImageView
                    android:id="@+id/company_logo_progress"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/company_logo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/company_logo" />
                 <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/company_logo_progress"
                    android:layout_marginTop="5dp"
                    android:layout_centerHorizontal="true"
                    android:theme="@style/WhiteAccent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/progressBar"
                    android:text="@string/loading"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/baseRelLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible">
                <ImageView
                    android:id="@+id/company_logo"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:paddingTop="20dp"
                    android:contentDescription="@string/company_logo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/company_logo" />
                <RelativeLayout
                    android:id="@+id/LoginTextRelLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="40dp"
                    android:layout_below="@+id/company_logo"
                    android:layout_centerInParent="true">
                    <TextView
                        android:id="@+id/LoginTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/roboto_thin"
                        android:paddingStart="15dp"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                    <RelativeLayout
                        android:paddingTop="10dp"
                        android:id="@+id/inptRelLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/LoginTV"
                        android:paddingStart="10dp">
                        <TextView
                            android:id="@+id/userNameTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/email_vehicle_id"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                        <RelativeLayout
                            android:id="@+id/emailRel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/userNameTV">
                            <android.support.design.widget.FloatingActionButton
                                android:id="@+id/floatingActionButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:clickable="false"
                                app:fabCustomSize="65dp"
                                android:layout_centerVertical="true"
                                app:backgroundTint="#f1f1f1"
                                app:srcCompat="@drawable/ic_email_black_24dp"/>
                            <EditText
                                android:id="@+id/userNameET"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:layout_marginEnd="5dp"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/et_box"
                                android:inputType="textEmailAddress"
                                android:paddingLeft="70dp"
                                android:paddingRight="15dp"
                                android:layout_centerVertical="true"
                                android:textColor="@android:color/black"
                                android:textCursorDrawable="@null" />
                        </RelativeLayout>
                        <TextView
                            android:id="@+id/passwordTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:layout_below="@+id/emailRel"
                            android:layout_marginStart="10dp"
                            android:text="@string/password"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/passwordTV">
                            <android.support.design.widget.FloatingActionButton
                                android:id="@+id/floatingActionButton2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:clickable="false"
                                app:fabCustomSize="65dp"
                                android:layout_centerVertical="true"
                                app:backgroundTint="#f1f1f1"
                                android:layout_alignParentStart="true"
                                app:srcCompat="@drawable/ic_lock_black_24dp"/>
                            <EditText
                                android:id="@+id/passwordET"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:background="@drawable/et_box"
                                android:inputType="textPassword"
                                android:paddingStart="70dp"
                                android:paddingEnd="35dp"
                                android:layout_centerVertical="true"
                                android:textColor="@android:color/black"
                                android:textCursorDrawable="@null" />
                            <ImageButton
                                android:id="@+id/viewPass"
                                android:layout_width="wrap_content"
                                android:layout_height="45dp"
                                android:src="@drawable/ic_baseline_visibility_off_24px"
                                android:background="@android:color/transparent"
                                android:layout_centerVertical="true"
                                android:layout_alignParentEnd="true"
                                android:paddingEnd="8dp"/>
                        </RelativeLayout>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/buttonRelLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:paddingTop="30dp"
                        android:layout_below="@+id/inptRelLayout">
                        <Button
                            android:id="@+id/LogInBT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="2dp"
                            android:background="@drawable/rounded_bt"
                            android:elevation="10dp"
                            android:text="@string/sign_in"
                            android:textAllCaps="false"
                            android:onClick="signinClick"
                            android:textColor="@color/white"
                            android:textSize="17sp" />
                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>